zink+radv: corruption on pre-game menu in quake3
The main menu on Quake 3 regressed in 5743fa6e, where we started getting somewhat random glitches.
This patch seems to fix it:
diff --git a/src/gallium/drivers/zink/zink_blit.c b/src/gallium/drivers/zink/zink_blit.c
index d02d369514d..2fa0c359cc0 100644
--- a/src/gallium/drivers/zink/zink_blit.c
+++ b/src/gallium/drivers/zink/zink_blit.c
@@ -70,8 +70,7 @@ blit_native(struct zink_context *ctx, const struct pipe_blit_info *info)
if (util_format_get_mask(info->dst.format) != info->mask ||
util_format_get_mask(info->src.format) != info->mask ||
info->scissor_enable ||
- info->alpha_blend ||
- info->render_condition_enable)
+ info->alpha_blend)
return false;
if (util_format_is_depth_or_stencil(info->dst.format) &&
That doesn't seem quite right, but no render-conditions should be active here. So perhaps we should either make sure info->render_condition_enable
isn't set in this case, or we should check if a render-condition has been enabled as well.
That's of course not going to properly explain it, because falling back to util_blitter
should still work, so there's more than that going on here. My initial guess would be some problems with our image barriers.